--- a/process/sass/style.scss
+++ b/process/sass/style.scss
@@ -1,4 +1,6 @@
  @import "variable.scss";
- @import "normalize.scss";
+
+ @import "mixins.scss";
  @import "base.scss";
  @import "modules/media.scss";
+ @import "modules/backgrounds.scss";
